--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello!</h1>
 
     <script src="js/script.js"></script>
-    <!--<script src="js/l_7.js"></script>-->
+    <!--<script src="js/L12.js"></script>-->
 
 </body>
 </html>
