--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <h1>Hello!</h1>
 
-    <script src="js/script.js"></script>
-    <!--<script src="js/L12.js"></script>-->
+    <!--<script src="js/script.js"></script>-->
+    <script src="js/L12_Traning_Part1.js"></script>
 
 </body>
 </html>
