Done Practice_3 && Сompleted 2  lessons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hello!</h1>
 
     <!--<script src="js/script.js"></script>-->
-    <script src="js/L18_Traning_Part3.js"></script>
+    <script src="js/L22.js"></script>
 
 </body>
 </html>
